fixed more left-align things

--- a/files/style.css
+++ b/files/style.css
@@ -82,6 +82,10 @@ h1 {
     font-size: 24px;
 }
 
+h3 {
+    text-align: left;
+}
+
 .small-h2 {
     font-size: 18px;
 }
